anadido  lista con otros datos

--- a/cv.html
+++ b/cv.html
@@ -54,6 +54,13 @@
        
     </table>
     </div>
+    <div>
+    <h2>Otros datos</h2>
+        <li>
+            <ul>Poseo coche</ul>
+            <ul>Disponibilidad para viajar</ul>
+        </li>
+    </div>
     
 
 </body>
