--- a/cv.html
+++ b/cv.html
@@ -12,7 +12,7 @@
     </header>
     <div>
     <h2>Formación</h2>
-    <table>
+    <table style="border: 1px solid black">
        <tr>
         <th>Título</th>
         <th>Año</th>
@@ -30,7 +30,7 @@
         <td>2019</td>
        </tr>
        
-    </table>
+    </table style="border: 1px solid black">
     </div>
     <div>
     <h2>Experiencia</h2>
@@ -52,7 +52,7 @@
         <td>2019</td>
        </tr>
        
-    </table>
+    </table style="border: 1px solid black">
     </div>
     <div>
     <h2>Otros datos</h2>
