poniendo borde en todas las tablas

--- a/cv.html
+++ b/cv.html
@@ -30,11 +30,11 @@
         <td>2019</td>
        </tr>
        
-    </table style="border: 1px solid black">
+    </table >
     </div>
     <div>
     <h2>Experiencia</h2>
-    <table>
+    <table style="border: 1px solid black">
        <tr>
         <th>Posición</th>
         <th>Año</th>
@@ -52,7 +52,7 @@
         <td>2019</td>
        </tr>
        
-    </table style="border: 1px solid black">
+    </table>
     </div>
     <div>
     <h2>Otros datos</h2>
