--- a/cv.html
+++ b/cv.html
@@ -7,12 +7,12 @@
 </head>
 <body>
     <header>
-    <h1>M. Ángeles Pardo</h1>
+    <h1 id="titleCV">M. Ángeles Pardo</h1>
     <p>Release Manager en Solera<p>
     </header>
     <div>
-    <h2>Formación</h2>
-    <table style="border: 1px solid black">
+    <h2 class="title2CV">Formación</h2>
+    <table class="tableContent">
        <tr>
         <th>Título</th>
         <th>Año</th>
@@ -33,8 +33,8 @@
     </table >
     </div>
     <div>
-    <h2>Experiencia</h2>
-    <table style="border: 1px solid black">
+    <h2 class="title2CV">Experiencia</h2>
+    <table class="tableContent">
        <tr>
         <th>Posición</th>
         <th>Año</th>
@@ -55,7 +55,7 @@
     </table>
     </div>
     <div>
-    <h2>Otros datos</h2>
+    <h2 class="title2CV">Otros datos</h2>
         
             <ul>Poseo coche</ul>
             <ul>Disponibilidad para viajar</ul>
