poniendomas selectores en las tablas

--- a/cv.html
+++ b/cv.html
@@ -14,20 +14,20 @@
     <h2 class="title2CV">Formación</h2>
     <table class="tableContent">
        <tr>
-        <th>Título</th>
-        <th>Año</th>
+        <th class="headColorTable">Título</th>
+        <th class="headColorTable">Año</th>
        </tr> 
        <tr>
-        <td>Bootcamp Upgrade Hub</td>
-        <td>2023</td>
+        <td class="colorFilaImpar">Bootcamp Upgrade Hub</td>
+        <td class="colorFilaPar">2023</td>
        </tr>
        <tr>
-        <td>FP DAM</td>
-        <td>2021</td>
+        <td class="colorFilaImpar">FP DAM</td>
+        <td class="colorFilaPar">2021</td>
        </tr>
        <tr>
-        <td>Master Calidad</td>
-        <td>2019</td>
+        <td class="colorFilaImpar">Master Calidad</td>
+        <td class="colorFilaPar">2019</td>
        </tr>
        
     </table >
@@ -36,20 +36,20 @@
     <h2 class="title2CV">Experiencia</h2>
     <table class="tableContent">
        <tr>
-        <th>Posición</th>
-        <th>Año</th>
+        <th class="headColorTable">Posición</th>
+        <th class="headColorTable">Año</th>
        </tr> 
        <tr>
-        <td>Release Manager</td>
-        <td>2023</td>
+        <td class="colorFilaImpar">Release Manager</td>
+        <td class="colorFilaPar">2023</td>
        </tr>
        <tr>
-        <td>App debeloper con PowerApps</td>
-        <td>2022</td>
+        <td class="colorFilaImpar">App debeloper con PowerApps</td>
+        <td class="colorFilaPar">2022</td>
        </tr>
        <tr>
-        <td>Técnico de Calidad</td>
-        <td>2019</td>
+        <td class="colorFilaImpar">Técnico de Calidad</td>
+        <td class="colorFilaPar">2019</td>
        </tr>
        
     </table>
